--- a/index.html
+++ b/index.html
@@ -2,96 +2,92 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Smart Move Pro</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
           integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
           crossorigin=""/>
     <link rel="stylesheet" href="css/style.css">
     <link rel="manifest" href="manifest.json">
-    <meta name="theme-color" content="#4A90E2">
-    <!-- iOS meta tags -->
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="SmartMovePro">
-    <link rel="apple-touch-icon" href="icons/icon-192x192.png"> <!-- O el tamaño preferido para Apple Touch Icon -->
+    <meta name="theme-color" content="#4CAF50">
 </head>
 <body>
-    <div id="app-container">
+    <div class="app-container">
         <div id="map"></div>
-        <div id="controls-panel">
-            <!-- Route Creation/Editing Section -->
-            <div class="control-section">
-                <h2>Crear/Editar Ruta</h2>
-                <div class="form-group">
+
+        <div class="controls-panel">
+            <section id="route-definition-panel">
+                <h2>Definición de Ruta</h2>
+                <div>
                     <label for="routeName">Nombre de Ruta:</label>
-                    <input type="text" id="routeName" placeholder="Ej: Linea 101 - Ramal A">
+                    <input type="text" id="routeName" placeholder="Ej: Línea 1 Mañana">
                 </div>
                 <div class="point-definition">
-                    <p><strong>Punto de Inicio:</strong> <span id="startPointCoords">No definido</span></p>
-                    <input type="text" id="startPointName" placeholder="Nombre Inicio (Ej: Terminal)">
-                    <input type="time" id="startPointTime">
-                    <button id="setStartPointBtn">Definir Inicio (Mapa)</button>
-                </div>
-                <div class="point-definition">
-                    <p><strong>Punto Final:</strong> <span id="endPointCoords">No definido</span></p>
-                    <input type="text" id="endPointName" placeholder="Nombre Fin (Ej: Plaza Central)">
-                    <input type="time" id="endPointTime">
-                    <button id="setEndPointBtn" disabled>Definir Fin (Mapa)</button>
-                </div>
-                <div class="form-group">
-                    <label>
-                        <input type="checkbox" id="autoCalcTimes" checked> Calcular horarios intermedios automáticamente
-                    </label>
-                </div>
-                <p id="intermediateStopInstruction">Toque el mapa para añadir paradas intermedias (después de definir Inicio/Fin).</p>
-                <div id="stopsListContainer">
-                    <h3>Paradas:</h3>
-                    <div id="stopsList">
-                        <!-- Lista de paradas se mostrará aquí -->
+                    <button id="btnSetStartPoint">Definir Punto de Inicio</button>
+                    <div class="point-details">
+                        <input type="text" id="startPointName" placeholder="Nombre Inicio (Ej: Terminal)">
+                        <input type="time" id="startPointTime">
+                        <span id="startPointCoords">Lat/Lng: (selecciona en mapa)</span>
                     </div>
                 </div>
-                <button id="saveRouteBtn" disabled>Guardar Ruta</button>
-                 <button id="resetEditorBtn">Limpiar Editor</button>
-            </div>
+                <div class="point-definition">
+                    <button id="btnSetEndPoint">Definir Punto Final</button>
+                    <div class="point-details">
+                        <input type="text" id="endPointName" placeholder="Nombre Fin (Ej: Plaza)">
+                        <input type="time" id="endPointTime">
+                        <span id="endPointCoords">Lat/Lng: (selecciona en mapa)</span>
+                    </div>
+                </div>
+                <button id="btnAddIntermediateStop" disabled>Añadir Parada Intermedia (toca el mapa)</button>
+                <div>
+                    <input type="checkbox" id="autoCalcTimes" checked>
+                    <label for="autoCalcTimes">Calcular horarios intermedios automáticamente</label>
+                </div>
+                <h3>Paradas de la Ruta Actual:</h3>
+                <ul id="currentRouteStopsList">
+                    <!-- Las paradas se listarán aquí -->
+                </ul>
+            </section>
 
-            <!-- Route Management Section -->
-            <div class="control-section">
-                <h2>Gestionar Rutas Guardadas</h2>
-                <select id="savedRoutesDropdown"><option value="">-- Sin rutas guardadas --</option></select>
-                <button id="loadRouteBtn" disabled>Cargar Ruta</button>
-                <button id="deleteRouteBtn" disabled>Eliminar Ruta</button>
-            </div>
+            <section id="route-management-panel">
+                <h2>Gestión de Rutas</h2>
+                <button id="btnSaveRoute">Guardar Ruta Actual</button>
+                <div>
+                    <label for="savedRoutesSelect">Rutas Guardadas:</label>
+                    <select id="savedRoutesSelect"></select>
+                    <button id="btnLoadRoute">Cargar Ruta</button>
+                    <button id="btnDeleteRoute">Eliminar Ruta</button>
+                </div>
+            </section>
 
-            <!-- Tracking Queue Section -->
-            <div class="control-section">
+            <section id="tracking-queue-panel">
                 <h2>Cola de Seguimiento</h2>
-                <button id="addSelectedRouteToQueueBtn" disabled>Añadir Ruta Seleccionada a Cola</button>
-                <ul id="trackingQueueList"></ul>
-                <button id="clearQueueBtn" disabled>Limpiar Cola</button>
-            </div>
+                <button id="btnAddSelectedToQueue">Añadir Ruta Cargada a Cola</button>
+                <h3>Rutas en Cola:</h3>
+                <ul id="trackingQueueList">
+                    <!-- Rutas en cola se listarán aquí -->
+                </ul>
+                <button id="btnClearQueue">Limpiar Cola</button>
+            </section>
 
-            <!-- Real-Time Tracking Section -->
-            <div class="control-section">
+            <section id="tracking-panel">
                 <h2>Seguimiento en Tiempo Real</h2>
-                <button id="startTrackingBtn" disabled>Iniciar Seguimiento</button>
-                <button id="stopTrackingBtn" disabled>Detener Seguimiento</button>
-                <div class="form-group manual-controls">
-                    <label>
-                        <input type="checkbox" id="manualControlCheckbox"> Control Manual Parada/Ruta
-                    </label>
-                    <div class="manual-buttons">
-                        <button id="prevStopBtn" disabled>Parada Anterior</button>
-                        <button id="nextStopBtn" disabled>Parada Siguiente</button>
-                    </div>
+                <button id="btnStartTracking">Iniciar Seguimiento</button>
+                <button id="btnStopTracking" disabled>Detener Seguimiento</button>
+                <div id="trackingInfo" style="display:none;">
+                    <p><strong>Ruta Activa:</strong> <span id="activeRouteName">---</span></p>
+                    <p><strong>Próxima Parada:</strong> <span id="nextStopInfo">---</span></p>
+                    <p><strong>Diferencia Horario:</strong> <span id="timeDifference">---</span></p>
                 </div>
-                <div id="trackingInfo">
-                    <p><strong>Ruta Activa:</strong> <span id="activeRouteName">-</span></p>
-                    <p><strong>Próxima Parada:</strong> <span id="nextStopInfo">-</span></p>
-                    <p><strong>Diferencia Horario:</strong> <span id="timeDifference">-</span></p>
-                    <p><strong>Estado GPS:</strong> <span id="gpsStatus">Inactivo</span></p>
+                <div>
+                    <input type="checkbox" id="manualModeToggle">
+                    <label for="manualModeToggle">Control Manual Parada/Ruta</label>
                 </div>
-            </div>
+                <div id="manualControls" style="display:none;">
+                    <button id="btnPreviousStop">Parada Anterior</button>
+                    <button id="btnNextStop">Parada Siguiente</button>
+                </div>
+            </section>
         </div>
     </div>
 
