--- a/index.html
+++ b/index.html
@@ -1,96 +1,98 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-T">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Smart Move Pro</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-     integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
-     crossorigin=""/>
+          integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+          crossorigin=""/>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="map"></div>
-    <div id="controls">
-        <div class="tabs">
-            <button class="tab-button active" onclick="showTab('createRouteTab')">Crear Ruta</button>
-            <button class="tab-button" onclick="showTab('savedRoutesTab')">Rutas Guardadas</button>
-            <button class="tab-button" onclick="showTab('trackingTab')">Seguimiento</button>
-            <button class="tab-button" onclick="showTab('queueTab')">Cola</button>
-        </div>
+    <div id="app-container">
+        <div id="map"></div>
+        <div id="controls">
+            <!-- Sección Creación de Ruta -->
+            <div id="route-creation-panel" class="panel">
+                <h2>Crear/Editar Ruta</h2>
+                <div class="form-group">
+                    <label for="routeName">Nombre de la Ruta:</label>
+                    <input type="text" id="routeName" placeholder="Ej: Recorrido Matutino">
+                </div>
+                <p>Toca el mapa para agregar paradas (Inicio -> Fin -> Intermedias).</p>
+                <div class="form-group">
+                    <label for="stopName">Nombre Parada:</label>
+                    <input type="text" id="stopName" placeholder="Ej: Terminal Central">
+                </div>
+                <div class="form-group">
+                    <label for="stopTime">Horario (HH:MM):</label>
+                    <input type="time" id="stopTime">
+                </div>
+                <div class="form-group">
+                    <label for="autoCalcTimes">Calcular horarios intermedios autom.:</label>
+                    <input type="checkbox" id="autoCalcTimes" checked>
+                </div>
+                <button id="addStopBtn" disabled>Añadir Parada (Seleccione Tipo)</button>
+                <button id="setStartBtn">Fijar Inicio</button>
+                <button id="setEndBtn" disabled>Fijar Fin</button>
+                <button id="setIntermediateBtn" disabled>Fijar Intermedia</button>
+                <button id="saveRouteBtn" disabled>Guardar Ruta Actual</button>
+                <button id="clearCurrentRouteBtn">Limpiar Ruta Actual</button>
 
-        <div id="createRouteTab" class="tab-content active">
-            <h2>Crear Nueva Ruta</h2>
-            <p id="instructionText">Toca el mapa para agregar el INICIO de la ruta.</p>
-            <div class="form-group">
-                <label for="stopName">Nombre Parada:</label>
-                <input type="text" id="stopName" placeholder="Ej: Terminal Central">
+                <h3>Paradas Actuales:</h3>
+                <ul id="currentStopsList"></ul>
             </div>
-            <div class="form-group">
-                <label for="stopTime">Horario (HH:MM):</label>
-                <input type="time" id="stopTime">
-            </div>
-            <button id="addStopButton" onclick="confirmAddStop()" disabled>Agregar Parada</button>
-            <button id="completeStopDefinitionButton" onclick="completeStopDefinition()" style="display:none;">Siguiente Paso</button>
-            
-            <div class="form-group">
-                <input type="checkbox" id="autoCalcTimes" checked>
-                <label for="autoCalcTimes">Calcular horarios intermedios automáticamente</label>
-            </div>
-            <button id="finishRouteButton" onclick="finishCreatingRoute()" style="display:none;">Finalizar Creación de Ruta</button>
-            <button onclick="clearCurrentRoute()">Limpiar Ruta Actual</button>
 
-            <h3>Paradas Actuales:</h3>
-            <ul id="currentRouteStops"></ul>
-        </div>
+            <!-- Sección Cargar/Borrar Rutas -->
+            <div id="route-management-panel" class="panel">
+                <h2>Rutas Guardadas</h2>
+                <select id="savedRoutesSelect"></select>
+                <button id="loadRouteBtn">Cargar Ruta</button>
+                <button id="deleteRouteBtn">Borrar Ruta</button>
+                <button id="viewRouteBtn">Ver Ruta Seleccionada</button>
+            </div>
 
-        <div id="savedRoutesTab" class="tab-content">
-            <h2>Rutas Guardadas</h2>
-            <div class="form-group">
-                <label for="routeName">Nombre para Guardar Ruta:</label>
-                <input type="text" id="routeName" placeholder="Ej: Recorrido Matutino">
-                <button onclick="saveCurrentRoute()">Guardar Ruta Actual</button>
+            <!-- Sección Seguimiento en Tiempo Real -->
+            <div id="tracking-panel" class="panel">
+                <h2>Seguimiento de Ruta</h2>
+                <button id="startTrackingBtn" disabled>Iniciar Seguimiento</button>
+                <button id="stopTrackingBtn" disabled>Detener Seguimiento</button>
+                <div id="tracking-info" style="display:none;">
+                    <p>Velocidad: <span id="speed">0</span> km/h</p>
+                    <p>Próxima Parada: <span id="nextStopName">-</span> (<span id="nextStopTime">-</span>)</p>
+                    <p>Desvío Horario: <span id="timeDeviation" class="on-time">00:00</span></p>
+                    <div class="form-group">
+                        <input type="checkbox" id="manualAdvanceCheck">
+                        <label for="manualAdvanceCheck">Avance Manual de Parada</label>
+                    </div>
+                    <button id="prevStopBtn" disabled>Anterior</button>
+                    <button id="nextStopBtn" disabled>Siguiente</button>
+                </div>
             </div>
-            <h3>Lista de Rutas:</h3>
-            <ul id="savedRoutesList"></ul>
+             <!-- Sección Cola de Rutas -->
+            <div id="route-queue-panel" class="panel">
+                <h2>Cola de Rutas</h2>
+                <div class="form-group">
+                    <label for="routeToQueueSelect">Añadir ruta a la cola:</label>
+                    <select id="routeToQueueSelect"></select>
+                    <button id="addToQueueBtn">Añadir a Cola</button>
+                </div>
+                <button id="startQueueBtn" disabled>Iniciar Cola</button>
+                <button id="clearQueueBtn">Limpiar Cola</button>
+                <h3>Rutas en Cola:</h3>
+                <ul id="queuedRoutesList"></ul>
+                <div class="form-group">
+                    <input type="checkbox" id="autoStartNextInQueue" checked>
+                    <label for="autoStartNextInQueue">Iniciar sig. ruta autom.</label>
+                </div>
+            </div>
         </div>
-
-        <div id="trackingTab" class="tab-content">
-            <h2>Seguimiento en Tiempo Real</h2>
-            <button id="startTrackingButton" onclick="startTracking()">Iniciar Seguimiento</button>
-            <button id="stopTrackingButton" onclick="stopTracking()" disabled>Detener Seguimiento</button>
-            <div id="trackingInfo">
-                <p>Velocidad: <span id="speed">--</span> km/h</p>
-                <p>Próxima Parada: <span id="nextStopInfo">--</span></p>
-                <p>Desvío Horario: <span id="timeDeviation">00:00</span></p>
-            </div>
-            <div class="form-group">
-                <input type="checkbox" id="manualAdvance" onchange="toggleManualAdvance(this.checked)">
-                <label for="manualAdvance">Avance Manual de Parada</label>
-            </div>
-            <button id="prevStopButton" onclick="manualPreviousStop()" disabled>Anterior</button>
-            <button id="nextStopButton" onclick="manualNextStop()" disabled>Siguiente</button>
-        </div>
-        
-        <div id="queueTab" class="tab-content">
-            <h2>Cola de Rutas</h2>
-            <p>Selecciona rutas guardadas para agregar a la cola:</p>
-            <select id="routeSelectorForQueue"></select>
-            <button onclick="addSelectedRouteToQueue()">Agregar a la Cola</button>
-            <h3>Rutas en Cola:</h3>
-            <ul id="routeQueueList"></ul>
-            <div class="form-group">
-                <input type="checkbox" id="autoStartNextInQueue" checked>
-                <label for="autoStartNextInQueue">Iniciar siguiente ruta automáticamente</label>
-            </div>
-            <button onclick="clearRouteQueue()">Limpiar Cola</button>
-        </div>
-
     </div>
 
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-     integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
-     crossorigin=""></script>
-    <script src="main.js"></script>
+            integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+            crossorigin=""></script>
+    <script src="script.js"></script>
 </body>
 </html>
