--- a/index.html
+++ b/index.html
@@ -1001,17 +1001,22 @@
 
         function displayDeviation(deviationMillis) {
             const absMillis = Math.abs(deviationMillis);
-            const seconds = Math.floor((absMillis / 1000) % 60);
-            const minutes = Math.floor((absMillis / (1000 * 60)) % 60);
-            // const hours = Math.floor((absMillis / (1000 * 60 * 60)) % 24); // Not showing hours for brevity
+
+            const totalSecondsValue = Math.floor(absMillis / 1000);
+            const displaySeconds = totalSecondsValue % 60; // Segundos a mostrar (0-59)
+
+            const totalMinutesValue = Math.floor(totalSecondsValue / 60); // Minutos totales (incluyendo horas convertidas)
 
             const sign = deviationMillis >= 0 ? "+" : "-";
-            // const formattedDeviation = `${sign}${String(hours).padStart(2, '0')}:${String(minutes).padStart(2, '0')}:${String(seconds).padStart(2, '0')}`;
-            const formattedDeviation = `${sign}${String(minutes).padStart(2, '0')}:${String(seconds).padStart(2, '0')}`;
-
+            
+            // Formatear los minutos totales y los segundos.
+            // Los minutos no necesitan padStart(2, '0') porque pueden ser > 99.
+            // Los segundos sí, para mantener el formato :SS.
+            const formattedDeviation = `${sign}${totalMinutesValue}:${String(displaySeconds).padStart(2, '0')}`;
 
             const deviationDiv = document.getElementById('timeDeviation');
             deviationDiv.textContent = formattedDeviation;
+
             if (deviationMillis === 0) {
                  deviationDiv.style.color = "#FFFFFF"; // White for on-time
             } else if (deviationMillis > 0) { // Adelantado
