--- a/index.html
+++ b/index.html
@@ -144,6 +144,6 @@
     </div>
 
     <!-- Script principal de la aplicación -->
-    <script src="script.js" defer></script>
+    <script type="module" src="script.js" defer></script>
 </body>
 </html>
